crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_SingleStarredExpression_3.10_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: starred assignment target must be in a list or tuple
 --> resources/test/fixtures/semantic_errors/single_starred_expression.py:1:1
  |
1 | *a = [1, 2, 3, 4]
  | ^^
  |
