crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_WalrusInComprehension_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: Unexpected indentation
 --> resources/test/fixtures/semantic_errors/async_comprehension_outside_async_function.py:6:1
  |
5 | async def f(): [x for x in foo()] and [x async for x in foo()]
6 |         async def f():
  | ^^^^^^^^
7 |             def g(): ...
8 |             [x async for x in foo()]
  |

invalid-syntax: Expected a statement
  --> resources/test/fixtures/semantic_errors/async_comprehension_outside_async_function.py:10:1
   |
 8 |             [x async for x in foo()]
 9 |         
10 | [x async for x in y]
   | ^
   |
