crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_WriteToDebug_write_to_debug_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: cannot assign to `__debug__`
 --> <filename>:2:1
  |
2 | __debug__ = False
  | ^^^^^^^^^
  |
