crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_WriteToDebug_write_to_debug_class_type_param_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: cannot assign to `__debug__`
 --> <filename>:2:15
  |
2 | class Generic[__debug__]:
  |               ^^^^^^^^^
3 |     pass
  |
