crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_WriteToDebug_write_to_debug_in_function_param_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: cannot assign to `__debug__`
 --> <filename>:2:13
  |
2 | def process(__debug__):
  |             ^^^^^^^^^
3 |     pass
  |
