crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_duplicate_match_class_attribute.py_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: attribute name `x` repeated in class pattern
 --> resources/test/fixtures/semantic_errors/duplicate_match_class_attribute.py:2:21
  |
2 |     case Point(x=1, x=2):
  |                     ^
  |
