crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_duplicate_type_parameter.py_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: duplicate type parameter
 --> resources/test/fixtures/semantic_errors/duplicate_type_parameter.py:1:12
  |
1 | class C[T, T]: pass
  |            ^
